--- a/Innovative Women/VirginiaApgar.css
+++ b/Innovative Women/VirginiaApgar.css
@@ -12,7 +12,7 @@ header {
 h1 { text-align: center;}
 
 body {
-    width: 964px;
+    width: 85%;
     background-color: WhiteSmoke;
     text-align:center;
     margin: 15px auto;
